Add vocab saver

--- a/translator.ipynb
+++ b/translator.ipynb
@@ -1550,7 +1550,7 @@
     "            \n",
     "            if valid_loss < best_valid_loss:\n",
     "                best_valid_loss = valid_loss\n",
-    "                torch.save(model.state_dict(), 'model_translator.pt')\n",
+    "                torch.save(model.state_dict(), 'models\\\\model_translator.pt')\n",
     "            \n",
     "            print(f'Epoch: {epoch+1:02} | Time: {epoch_mins}m {epoch_secs}s')\n",
     "            print(f'\\tTrain Loss: {train_loss:.3f} | Train PPL: {math.exp(train_loss):7.3f}')\n",
@@ -1637,7 +1637,7 @@
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load('model_translator.pt'))\n",
+    "model.load_state_dict(torch.load('models\\\\model_translator.pt'))\n",
     "\n",
     "test_loss = evaluate(model, test_iterator, criterion)\n",
     "\n",
